# lazy-static-include

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
benches/: bench.rs
data/: benchmark.txt  bool_array-large.txt  bool_array.txt  f32_array.txt  f64_array.txt  i128_array.txt  i16_array.txt  i32_array-2.txt  i32_array.txt  i64_array.txt  i8_array.txt  isize_array.txt  string_array-2.txt  string_array.txt  test.txt  u128_array.txt  u16_array.txt  u32_array.txt  u64_array.txt  u8_array.txt  usize_array.txt
src/: lib.rs  macro_include_array.rs  macro_include_bytes.rs  macro_include_counter.rs  macro_include_str.rs
tests/: benchmark.rs  macro.rs  macros.rs  pub.rs  test_mod.rs
