[package]
name = "lazy-static-include"
version = "3.2.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/lazy-static-include"
homepage = "https://magiclen.org/lazy-static-include"
keywords = ["lazy", "macro", "static", "include"]
categories = ["memory-management", "rust-patterns"]
description = "This crate provides `lazy_static_include_bytes` and `lazy_static_include_str` macros to replace `include_bytes` and `include_str` macros."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/bench.rs"]

[dependencies]
lazy_static = "1.4"
manifest-dir-macros = { version = "0.1.6", features = ["tuple"] }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
bencher = "0.1.5"
serde_json = "1.0"
assert-eq-float = "0.1"

slash-formatter = "3.1.3"

[[bench]]
name = "bench"
harness = false
